--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "git-test-1",
+  "name": "my-git-flow",
   "version": "1.0.0",
   "description": "test git commands for special use cases",
-  "main": "index.js",
+  "type": "module",
+  "main": "./public/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "clear && node ./gitjs/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/boulaya66/git-test-.git"
   },
-  "author": "",
+  "keywords": [
+    "git",
+    "workflow"
+  ],
+  "author": "Philippe Gensane",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/boulaya66/git-test-/issues"
   },
-  "homepage": "https://github.com/boulaya66/git-test-#readme"
+  "homepage": "https://github.com/boulaya66/git-test-#readme",
+  "dependencies": {
+    "colors": "^1.4.0"
+  }
 }
