FEA#002-gitjs status ok

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "main": "./public/server.js",
   "scripts": {
-    "test": "clear && node ./gitjs/index.js"
+    "test": "clear && node ./gitjs/index.js gitBranches branch 'commit msg'"
+  },
+  "bin":{
+    "gitjs": "./gitjs/index.js"
   },
   "repository": {
     "type": "git",
