--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "clear && node ./gitjs/index.js gitBranches branch 'commit msg'"
   },
-  "bin":{
+  "bin": {
     "gitjs": "./gitjs/index.js"
   },
   "repository": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/boulaya66/git-test-#readme",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "commander": "^5.1.0"
   }
 }
